# UmlTest

./: CMakeLists.txt  README.md  clang_format.sh
.github/workflows/: main.yml
src/: Client.cpp  Client.h  Client.h.bak  ComputeRes.cpp  ComputeRes.h  OpType.cpp  OpType.h  Solver.cpp  Solver.h  SolverFactory.cpp  SolverFactory.h  SolverImpl.cpp  SolverImpl.h  Transaction.cpp  Transaction.h  TransactionState.cpp  TransactionState.h
src/tests/smoke/: ClientCreate.cpp  ClientCreateTransaction.cpp
